- enable vector drawable support lib in build.gradle - add bitcoin vectordrawable file in res - add new style in styles.xml - create application class for app (for init. animoji lib) - add aplication class ref. in manifest

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="orangeAccent" parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">#f57c00</item>
+    </style>
+
 </resources>
