--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="spacing_normal">25dp</dimen>
+    <dimen name="spacing_small">10dp</dimen>
+    <dimen name="text_size">20sp</dimen>
+    <dimen name="text_size_xl">35sp</dimen>
 </resources>
