--- a/app/src/main/res/layout/bitcoin_index_activity.xml
+++ b/app/src/main/res/layout/bitcoin_index_activity.xml
@@ -66,5 +66,22 @@
             app:layout_constraintTop_toBottomOf="@+id/progress"
             tools:text="ojoooihoihohoihiohhoihio" />
 
+
+
+        <TextView
+            android:id="@+id/regular_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:textSize="@dimen/text_size_xl"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="@dimen/spacing_normal"
+            tools:text="ojoooihoihohoihiohhoihio"
+            android:gravity="end"
+            />
+
+
     </android.support.constraint.ConstraintLayout>
 </layout>
